--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,9 @@ jobs:
         cd _book
         git config --global user.email "${MYEMAIL}"
         git config --global user.name "${MYNAME}"
+        git init
+        git remote add origin https://${REF}
+        git branch -M main
         git add .
         git commit -m "Updated by Github Actions with build ${{github.run_number}} of ${{github.workflow}} For Github Pages"
         git push origin main:gh_pages
